--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,18 +6,19 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.0 <3.0.0'
+  sdk: '>=3.1.4 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: 
-  flutter_screenutil:
-  get: 
-  dio: 
-  sqflite:
-  geolocator:
+  cupertino_icons: ^1.0.8
+  flutter_screenutil: ^5.9.3 
+  get: ^4.6.6
+  dio: ^5.4.3+1
+  sqflite: ^2.3.3+1
+  geolocator: ^12.0.0
+  jiffy: ^6.3.1
 
 dev_dependencies:
   flutter_test:
@@ -30,16 +31,3 @@ flutter:
   uses-material-design: true
   assets:
     - assets/animations/
-
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  
